# sandoro

./: .env.supabase.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RUNBOOK.md  mise.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: app.rs  auth.rs  config.rs  db.rs  main.rs  messages.rs  notification.rs  supabase.rs  sync.rs  theme.rs  timer.rs  ui.rs
cli/src/icons/: coffee.rs  hourglass.rs  mod.rs  progress.rs  tomato.rs
docs/: E2E_TEST_DESIGN.md  stripe-setup.md
shared/: schema.sql
shared/themes/: default.toml  dracula.toml  nord.toml
supabase/: config.toml
supabase/functions/: .env.example
supabase/functions/create-checkout/: index.ts
supabase/functions/create-donation-checkout/: index.test.ts  index.ts
supabase/functions/customer-portal/: index.ts
supabase/functions/stripe-webhook/: index.test.ts  index.ts
supabase/migrations/: 20260117124646_init_schema.sql  20260119110000_add_sound_pattern_language.sql  20260119_add_language_sound_pattern.sql  20260120_add_focus_mode_snooze.sql  20260122_add_subscriptions.sql  20260123_add_donations.sql
web/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/public/: manifest.json
web/scripts/: generate-pwa-icons.js
web/src/: App.tsx  main.tsx
web/src/components/: AuthButton.tsx  Footer.tsx  Heatmap.tsx  IconPreview.tsx  LoginModal.tsx  LoginRequired.tsx  PrivacyPolicy.tsx  Settings.tsx  ShareCard.tsx  ShareModal.tsx  Stats.tsx  Support.tsx
web/src/hooks/: useAuth.tsx  (+16 more)
(+17 files in other folders)
